--- a/Manifest.json
+++ b/Manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "Undepress membership",
+    "name": "Pomie Open Membership Undepresso",
     "version": "1.0",
-    "description": "An attempt to fill the empty boxes of depression in vods of channels where the membership is closed",
+    "description": "An attempt to fill the empty boxes of depression in vods of pomu's channel after the membership is closed",
     "browser_action": {
       "default_popup": "popup.html",
       "default_icon": {
