--- a/Manifest.json
+++ b/Manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Pomie Open Membership Undepresso",
-    "version": "1.0",
+    "version": "0.8",
     "description": "An attempt to fill the empty boxes of depression in vods of pomu's channel after the membership is closed",
     "browser_action": {
       "default_popup": "popup.html",
@@ -21,7 +21,7 @@
     },
     "content_scripts": [
       {
-        "matches": ["<all_urls>"],
+        "matches": ["https://www.youtube.com/watch*"],
         "js": ["content.js"]
       }
     ]
