--- a/Manifest.json
+++ b/Manifest.json
@@ -21,7 +21,7 @@
     },
     "content_scripts": [
       {
-        "matches": ["https://www.youtube.com/watch*"],
+        "matches": ["<all_urls>"],
         "js": ["content.js"]
       }
     ]
